--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,3 +2,4 @@
 @import './componentes/navbar.scss';
 @import './componentes/banner.scss';
 @import './componentes/_servicos.scss';
+@import './componentes/cupom';
