--- a/styles/componentes/_servicos.scss
+++ b/styles/componentes/_servicos.scss
@@ -17,4 +17,33 @@
         margin-bottom: 80px;
         font-weight: 300;
     }
+
+    .cards{
+        display:flex;
+        justify-content: space-evenly;
+        .card{
+            width: 360px;
+            text-align: center;
+            h5{
+                font-size:tamanho-do-texto/1.5;
+                font-weight: 300;
+                margin-top: 25px;
+                margin-bottom:20px;
+                color:$cor-primaria;
+            }
+            p{
+                font-size:$tamanho-do-texto/3;
+                font-weight: 300;
+                color: $cor-secundaria;
+                line-height: 1.25rem;
+            }
+            .img-container{
+                padding-bottom:2px;
+                border-bottom:2px solid $cor-secundaria;
+                img{
+                    max-width: 100%;
+                }
+            }
+        }
+    }
 }
